--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-chart-kit": "^6.11.0",
+    "react-native-charts-wrapper": "^0.5.7",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-pager-view": "^5.1.3",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
+    "react-native-svg": "^12.1.1-0",
+    "react-native-tab-view": "^3.0.1",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.4.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
     "react-navigation-tabs": "^2.10.1"
